--- a/s1/g2/Esercizio/articolo.html
+++ b/s1/g2/Esercizio/articolo.html
@@ -35,8 +35,8 @@
     <main>
         <article class="clearfix">
             <div class="article-title">
-                <h1>Come creare un template per i post </h1>
-                <img src="./assets/img/underline.svg" class="underlined" alt="underline">
+                <h1>Come creare un <span style="display: inline-block;">template per i post <img src="./assets/img/underline.svg" class="underlined" alt="underline"></span>  </h1>
+                
             </div>
             <p><i class="fas fa-pen-square"></i> di Mario Rossi - <span><i class="fas fa-clock"></i> pubblicato il
                     25-10-2020</span></p>
@@ -162,10 +162,10 @@
                 title="contattami per informazioni/lavoro/privacy">info@epicode.school</a></address>
 
 
-        <button class="to-top"> <a href="#"><i class="fas fa-arrow-up"></i></a> </button>
-        <button class="calendar"> <a href="https://calendar.google.com/calendar/u/0/r?pli=1"><i
+        <button class="to-top"> <a href="#" target="_blank"><i class="fas fa-arrow-up"></i></a> </button>
+        <button class="calendar"> <a href="https://calendar.google.com/calendar/u/0/r?pli=1" target="_blank"><i
                     class="far fa-calendar-alt"></i></a> </button>
-        <button class="plus"> <a href="https://www.instagram.com/epicode.italia/"><i class="far fa-plus-square"></i></a>
+        <button class="plus"> <a href="https://www.instagram.com/epicode.italia/" target="_blank"><i class="far fa-plus-square"></i></a>
         </button>
     </footer>
 
