--- a/s1/g4/Esercizio/start1/postit.html
+++ b/s1/g4/Esercizio/start1/postit.html
@@ -48,6 +48,9 @@
             <p>Testarli</p>
         </div>
     </main>
+    <footer>
+        2023 &copy; | Marianna A.
+    </footer>
 </body>
 
 </html>
