Added falling effect

--- a/s1/g4/Esercizio/start1/postit.html
+++ b/s1/g4/Esercizio/start1/postit.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-
+    <header>
+        <p>Psss... falli cadere! <span>active</span> </p>
+    </header>
     <main>
         <div class="postit" id="postit1">
             <h2>Task #1</h2>
