--- a/s1/g5/Esercizio/index.html
+++ b/s1/g5/Esercizio/index.html
@@ -5390,7 +5390,7 @@
                         </div>
                         <div class="article-content">
                             <div class="profile">
-                                <img src="Assets/imgs/image02.png" alt="profile picture">
+                                <img src="Assets/imgs/image09.jpeg" alt="profile picture">
                                 <p class="author">Arthur Hayes in Entrepreneur's Handbook</p>
                             </div>
                             <h6>Comeback</h6>
@@ -5416,7 +5416,7 @@
                         </div>
                         <div class="article-content">
                             <div class="profile">
-                                <img src="Assets/imgs/image02.png" alt="profile picture">
+                                <img src="Assets/imgs/image11.jpeg" alt="profile picture">
                                 <p class="author">Frank Mastropolo in The Riffk</p>
                             </div>
                             <h6>The Night Paul McCartney Donned a Disguise at Fillmore East</h6>
@@ -5429,7 +5429,7 @@
                         </div>
                         <div class="article-content">
                             <div class="profile">
-                                <img src="Assets/imgs/image02.png" alt="profile picture">
+                                <img src="Assets/imgs/image15.jpeg" alt="profile picture">
                                 <p class="author">Frank Andrade in Towards Data Science</p>
                             </div>
                             <h6>5 Python Projects to Automate Your Life: From Beginner to Advanced</h6>
@@ -5442,7 +5442,7 @@
                         </div>
                         <div class="article-content">
                             <div class="profile">
-                                <img src="Assets/imgs/image02.png" alt="profile picture">
+                                <img src="Assets/imgs/image06.png" alt="profile picture">
                                 <p class="author">Wesley Smits in JavaScript in Plain English</p>
                             </div>
                             <h6>How To Make Visual Studio Code Look Amazing</h6>
@@ -5483,7 +5483,7 @@
                         <div class="other-article-content">
                             <div class="main-article-content">
                                 <div class="other-profile">
-                                    <img src="Assets/imgs/image05.jpeg" alt="profile picture">
+                                    <img src="Assets/imgs/image01.jpeg" alt="profile picture">
                                     <p class="other-author">Taru Anniina Liikanen</p>
                                 </div>
                                 <h6>Is Taylor Swift Allowed to Speak About Fat?</h6>
@@ -5494,7 +5494,7 @@
                                 </div>
                             </div>
                             <div class="article-image">
-                                <img src="Assets/imgs/image08.jpeg" alt="article image">
+                                <img src="Assets/imgs/image10.jpeg" alt="article image">
                             </div>
                         </div>
                     </div>
@@ -5503,7 +5503,7 @@
                         <div class="other-article-content">
                             <div class="main-article-content">
                                 <div class="other-profile">
-                                    <img src="Assets/imgs/image05.jpeg" alt="profile picture">
+                                    <img src="Assets/imgs/image07.jpeg" alt="profile picture">
                                     <p class="other-author">David Rodenas, Ph. D.</p>
                                 </div>
                                 <h6>Don’t Screw Up, You Will Be Found Guilty</h6>
@@ -5515,7 +5515,7 @@
                                 </div>
                             </div>
                             <div class="article-image">
-                                <img src="Assets/imgs/image08.jpeg" alt="article image">
+                                <img src="Assets/imgs/image18.jpeg" alt="article image">
                             </div>
                         </div>
                     </div>
@@ -5524,7 +5524,7 @@
                         <div class="other-article-content">
                             <div class="main-article-content">
                                 <div class="other-profile">
-                                    <img src="Assets/imgs/image05.jpeg" alt="profile picture">
+                                    <img src="Assets/imgs/image13.png" alt="profile picture">
                                     <p class="other-author">Microsoft Design</p>
                                 </div>
                                 <h6>Leave No Trace</h6>
@@ -5536,7 +5536,7 @@
                                 </div>
                             </div>
                             <div class="article-image">
-                                <img src="Assets/imgs/image08.jpeg" alt="article image">
+                                <img src="Assets/imgs/image20.jpg" alt="article image">
                             </div>
                         </div>
                     </div>
@@ -5545,7 +5545,7 @@
                         <div class="other-article-content">
                             <div class="main-article-content">
                                 <div class="other-profile">
-                                    <img src="Assets/imgs/image05.jpeg" alt="profile picture">
+                                    <img src="Assets/imgs/image03.jpeg" alt="profile picture">
                                     <p class="other-author">Scott H. Young</p>
                                 </div>
                                 <h6>Variability, Not Repetition, is the Key to Mastery</h6>
@@ -5557,7 +5557,7 @@
                                 </div>
                             </div>
                             <div class="article-image">
-                                <img src="Assets/imgs/image08.jpeg" alt="article image">
+                                <img src="Assets/imgs/image16.jpg" alt="article image">
                             </div>
                         </div>
                     </div>
@@ -5566,7 +5566,7 @@
                         <div class="other-article-content">
                             <div class="main-article-content">
                                 <div class="other-profile">
-                                    <img src="Assets/imgs/image05.jpeg" alt="profile picture">
+                                    <img src="Assets/imgs/image04.png" alt="profile picture">
                                     <p class="other-author">Paul A. DeStefanoin Human Parts</p>
                                 </div>
                                 <h6>What I Overheard as an Escape Room Actor</h6>
@@ -5578,7 +5578,7 @@
                                 </div>
                             </div>
                             <div class="article-image">
-                                <img src="Assets/imgs/image08.jpeg" alt="article image">
+                                <img src="Assets/imgs/image14.png" alt="article image">
                             </div>
                         </div>
                     </div>
@@ -5587,7 +5587,7 @@
                         <div class="other-article-content">
                             <div class="main-article-content">
                                 <div class="other-profile">
-                                    <img src="Assets/imgs/image05.jpeg" alt="profile picture">
+                                    <img src="Assets/imgs/image19.jpeg" alt="profile picture">
                                     <p class="other-author">Kim Scott</p>
                                 </div>
                                 <h6>6 Steps for Setting Measurable Goals to Avoid “Productivity Paranoia”</h6>
@@ -5599,7 +5599,7 @@
                                 </div>
                             </div>
                             <div class="article-image">
-                                <img src="Assets/imgs/image08.jpeg" alt="article image">
+                                <img src="Assets/imgs/image12.png" alt="article image">
                             </div>
                         </div>
                     </div>
