--- a/s1/g5/Esercizio/index.html
+++ b/s1/g5/Esercizio/index.html
@@ -5380,7 +5380,8 @@
                                 <p class="author">Tom Cooper</p>
                             </div>
                             <h6>Ukraine War, 23 October 2022</h6>
-                            <p class="date">Oct 23 · 5 min read</p>
+                            <p class="date">Oct 23 · 5 min read <img src="Assets/imgs/svg/star.svg" alt="star" class="star"> </p>
+                            
                         </div>
                     </div>
 
@@ -5394,7 +5395,7 @@
                                 <p class="author">Arthur Hayes in Entrepreneur's Handbook</p>
                             </div>
                             <h6>Comeback</h6>
-                            <p class="date">Oct 26 · 24 min read</p>
+                            <p class="date">Oct 26 · 24 min read <img src="Assets/imgs/svg/star.svg" alt="star" class="star"></p>
                         </div>
                     </div>
                     <div class="article">
@@ -5407,7 +5408,7 @@
                                 <p class="author">Tom Cooper</p>
                             </div>
                             <h6>How I Learned to Love My Breasts Even Though One Is A Horcrux For Voldemort</h6>
-                            <p class="date">Oct 26 · 2 min read</p>
+                            <p class="date">Oct 26 · 2 min read <img src="Assets/imgs/svg/star.svg" alt="star" class="star"></p>
                         </div>
                     </div>
                     <div class="article">
@@ -5420,7 +5421,7 @@
                                 <p class="author">Frank Mastropolo in The Riffk</p>
                             </div>
                             <h6>The Night Paul McCartney Donned a Disguise at Fillmore East</h6>
-                            <p class="date">Oct 22 · 3 min read</p>
+                            <p class="date">Oct 22 · 3 min read <img src="Assets/imgs/svg/star.svg" alt="star" class="star"></p>
                         </div>
                     </div>
                     <div class="article">
@@ -5433,7 +5434,7 @@
                                 <p class="author">Frank Andrade in Towards Data Science</p>
                             </div>
                             <h6>5 Python Projects to Automate Your Life: From Beginner to Advanced</h6>
-                            <p class="date">Oct 13 · 6 min read</p>
+                            <p class="date">Oct 13 · 6 min read <img src="Assets/imgs/svg/star.svg" alt="star" class="star"></p>
                         </div>
                     </div>
                     <div class="article">
@@ -5446,7 +5447,7 @@
                                 <p class="author">Wesley Smits in JavaScript in Plain English</p>
                             </div>
                             <h6>How To Make Visual Studio Code Look Amazing</h6>
-                            <p class="date">Oct 20 · 7 min read</p>
+                            <p class="date">Oct 20 · 7 min read <img src="Assets/imgs/svg/star.svg" alt="star" class="star"></p>
                         </div>
                     </div>
 
