--- a/w2/d1/index.html
+++ b/w2/d1/index.html
@@ -64,8 +64,8 @@
     <h2 class="text-center">Esercizio 5</h2>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 bg-primary text-ligh text-center p-3 border border-dark">Prova esercizio</div>
-            <div class="col-lg-4 bg-primary text-ligh text-center p-3 border border-dark">
+            <div class="col-lg-8 bg-primary text-light text-center p-3 border border-dark">Prova esercizio</div>
+            <div class="col-lg-4 bg-primary text-light text-center p-3 border border-dark">
                 <div class="row">
                     <div class="col-lg bg-secondary text-ligh text-center p-3 border border-dark">Prova esercizio</div>
                     <div class="col-lg bg-secondary text-ligh text-center p-3 border border-dark">Prova esercizio</div>
