--- a/w2/d1/index.html
+++ b/w2/d1/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 class="text-center">Pratica nel Grid System</h1>
+    <h1 class="text-center">Pratica con il Grid System</h1>
 
 
     <h2 class="text-center">Esercizio 1</h2>
