--- a/w2/d1/index.html
+++ b/w2/d1/index.html
@@ -16,9 +16,16 @@
     <h2 class="text-center">Esercizio 1</h2>
     <div class="container">
         <div class="row">
-            <div class="col-md-4 bg-primary text-white p-3 border border-dark">Prova esercizio</div>
-            <div class="col-md-4 bg-primary text-white p-3 border border-dark">Prova esercizio</div>
-            <div class="col-md-4 bg-primary text-white p-3 border border-dark">Prova esercizio</div>
+            <div class="col-md-4 ">
+                <p class="bg-primary text-white p-3 border border-dark">Prova esercizio</p>
+            </div>
+            <div class="col-md-4 ">
+                <p class="bg-primary text-white p-3 border border-dark">Prova esercizio</p>
+            </div>
+            <div class="col-md-4 ">
+                <p class="bg-primary text-white p-3 border border-dark">Prova esercizio</p>
+            </div>
+
         </div>
     </div>
 
@@ -28,9 +35,15 @@
     <h2 class="text-center">Esercizio 2</h2>
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 p-3 bg-warning text-dark border border-dark">Prova esercizio</div>
-            <div class="col-lg-4 p-3 bg-warning text-dark border border-dark">Prova esercizio</div>
-            <div class="col-lg-4 p-3 bg-warning text-dark border border-dark">Prova esercizio</div>
+            <div class="col-lg-4 ">
+                <p class="p-3 bg-warning text-dark border border-dark">Prova esercizio</p>
+            </div>
+            <div class="col-lg-4 ">
+                <p class="p-3 bg-warning text-dark border border-dark">Prova esercizio</p>
+            </div>
+            <div class="col-lg-4 ">
+                <p class="p-3 bg-warning text-dark border border-dark">Prova esercizio</p>
+            </div>
         </div>
     </div>
 
@@ -40,9 +53,15 @@
     <h2 class="text-center">Esercizio 3</h2>
     <div class="container">
         <div class="row">
-            <div class="col-4 bg-success text-light text-center p-3 border border-dark">Prova esercizio</div>
-            <div class="col-4 bg-success text-light text-center p-3 border border-dark">Prova esercizio</div>
-            <div class="col-4 bg-success text-light text-center p-3 border border-dark">Prova esercizio</div>
+            <div class="col-4 ">
+                <p class="bg-success text-light text-center p-3 border border-dark">Prova esercizio</p>
+            </div>
+            <div class="col-4 ">
+                <p class="bg-success text-light text-center p-3 border border-dark">Prova esercizio</p>
+            </div>
+            <div class="col-4 ">
+                <p class="bg-success text-light text-center p-3 border border-dark">Prova esercizio</p>
+            </div>
         </div>
     </div>
 
@@ -52,9 +71,15 @@
     <h2 class="text-center">Esercizio 4</h2>
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 bg-danger text-light p-3 border border-dark">Prova esercizio</div>
-            <div class="col-lg-6 bg-danger text-light p-3 border border-dark">Prova esercizio</div>
-            <div class="col-lg-3 bg-danger text-light p-3 border border-dark">Prova esercizio</div>
+            <div class="col-lg-3 ">
+                <p class="bg-danger text-light p-3 border border-dark">Prova esercizio</p>
+            </div>
+            <div class="col-lg-3 ">
+                <p class="bg-danger text-light p-3 border border-dark">Prova esercizio</p>
+            </div>
+            <div class="col-lg-3 ">
+                <p class="bg-danger text-light p-3 border border-dark">Prova esercizio</p>
+            </div>
         </div>
     </div>
 
@@ -64,11 +89,17 @@
     <h2 class="text-center">Esercizio 5</h2>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 bg-primary text-light text-center p-3 border border-dark">Prova esercizio</div>
-            <div class="col-lg-4 bg-primary text-light text-center p-3 border border-dark">
+            <div class="col-lg-4 ">
+                <p class="bg-primary text-light text-center p-3 border border-dark">Prova esercizio</p>
+            </div>
+            <div class="col-lg-8 bg-primary text-light text-center p-3 border border-dark">
                 <div class="row">
-                    <div class="col-lg bg-secondary text-ligh text-center p-3 border border-dark">Prova esercizio</div>
-                    <div class="col-lg bg-secondary text-ligh text-center p-3 border border-dark">Prova esercizio</div>
+                    <div class="col-lg ">
+                        <p class="bg-secondary text-ligh text-center p-3 border border-dark">Prova esercizio</p>
+                    </div>
+                    <div class="col-lg ">
+                        <p class="bg-secondary text-ligh text-center p-3 border border-dark">Prova esercizio</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -80,8 +111,12 @@
     <h2 class="text-center">Esercizio 6</h2>
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 bg-dark text-light text-center p-3">Prova esercizio</div>
-            <div class="col-lg-3 offset-lg-3 bg-dark text-light text-center p-3">Prova esercizio</div>
+            <div class="col-lg-3 ">
+                <p class="bg-dark text-light text-center p-3">Prova esercizio</p>
+            </div>
+            <div class="col-lg-3 offset-lg-3">
+                <p class="bg-dark text-light text-center p-3">Prova esercizio</p>
+            </div>
         </div>
     </div>
 
