--- a/w2/d2/Esercizio/index.html
+++ b/w2/d2/Esercizio/index.html
@@ -152,7 +152,10 @@
                 <div id="welcome-collapse" class="collapse-show">
                     <div class="row row-cols-sm-2 row-cols-lg-3 row-cols-xl-6 justify-content-center gy-3">
                         <div class="col">
-                            <div class="card border border-primary border-1 rounded-2 overflow-hidden shadow-lg">
+                            <div class="card border border-primary border-1 rounded-2 shadow-lg"> <span
+                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger p-2">
+                                    HOT
+                                </span>
                                 <img src="https://images.pexels.com/photos/1320686/pexels-photo-1320686.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-scale" alt="...">
                                 <div class="card-body">
@@ -165,7 +168,10 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card border border-primary border-1 rounded overflow-hidden shadow-lg">
+                            <div class="card border border-primary border-1 rounded shadow-lg"> <span
+                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger p-2">
+                                    HOT
+                                </span>
                                 <img src="https://images.pexels.com/photos/3601425/pexels-photo-3601425.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
                                 <div class="card-body">
@@ -178,7 +184,10 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card border border-primary border-1 rounded overflow-hidden shadow-lg">
+                            <div class="card border border-primary border-1 rounded shadow-lg"> <span
+                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger p-2">
+                                    HOT
+                                </span>
                                 <img src="https://images.pexels.com/photos/5044923/pexels-photo-5044923.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
                                 <div class="card-body">
@@ -191,7 +200,10 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card border border-primary border-1 rounded overflow-hidden shadow-lg">
+                            <div class="card border border-primary border-1 rounded shadow-lg"> <span
+                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger p-2">
+                                    HOT
+                                </span>
                                 <img src="https://images.pexels.com/photos/5992583/pexels-photo-5992583.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
                                 <div class="card-body">
@@ -204,7 +216,10 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card border border-primary border-1 rounded overflow-hidden shadow-lg">
+                            <div class="card border border-primary border-1 rounded shadow-lg"> <span
+                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger p-2">
+                                    HOT
+                                </span>
                                 <img src="https://images.pexels.com/photos/5992583/pexels-photo-5992583.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
                                 <div class="card-body">
@@ -217,7 +232,10 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card border border-primary border-1 rounded overflow-hidden shadow-lg">
+                            <div class="card border border-primary border-1 rounded shadow-lg"> <span
+                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger p-2">
+                                    HOT
+                                </span>
                                 <img src="https://images.pexels.com/photos/5992583/pexels-photo-5992583.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
                                 <div class="card-body">
@@ -343,11 +361,39 @@
 
     <footer>
         <div class="container-fluid bg-dark text-center py-5">
-            <button class="btn btn-outline-light my-3" type="button">Contattaci</button>
+            <button class="btn btn-outline-light my-3" type="button" data-bs-toggle="modal"
+                data-bs-target="#contattaci">Contattaci</button>
             <p class="text-light">The Oasis - Travel Agency</p>
             <p class="text-light-emphasis">A Bootstrap project by Marianna A.</p>
         </div>
     </footer>
+
+    <div class="modal fade" id="contattaci" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Contattaci</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="recipient-name" class="col-form-label">Email:</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="message-text" class="col-form-label">Messaggio:</label>
+                            <textarea class="form-control" id="message-text"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancella</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Invia</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
